2012-07-26 Adam Fedor <fedor@gnu.org>

	* Version 0.1

2012-07-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Use pointer value when formatting a pointer.

2012-07-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Always format floating numbers and
	endianness problem in character formatting.

2012-07-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac:
	* configure: Fix typo.
	* Source/GSPrivate.h: Define ObjC macros for libobjc2, too.
	* Tests/CFString/create.m: Fix for big endian machines.
	* Tests/CFNumber/general.m: Be more verbose.

2012-07-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/config.h.in:
	* configure.ac:
	* configure: Correctly detect libobjc2 on some systems.
	* Source/CFLocal.c: Don't search past the end of the _kCFLocaleValues
	array.

2012-07-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac:
	* configure: Use gnustep-config to find include directories.
	* COPYING:
	* COPYING.LIB:
	* INSTALL:
	* README: Add distribution files.

2012-06-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Avoid memory leak.
	* Source/CFString.c: Simplify constant string generation.
	* Source/CFTimeZone.c: Fix bug in CFTimeZoneGetDaylightSavingTimeOffset().

2012-06-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/ GSHashTable.c: Correctly hash keys when a hash function
	is provided.
	* Source/CFTimeZone.c: Implement abbreviation dictionary.
	* Tests/CFTimeZone/general.m: Uncomment abbreviation dictionary test.

2012-05-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Avoid memory leak.
	* Source/CFURL.c: Correctly copy file system path.
	* Source/CFBase.c: Do a memory copy of the context.
	* Source/CFCharacterSet.c: Correctly calculate string length.
	* Tests/CFCharacterSet/basic.m: New tests.

2012-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c:
	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFCalendar.c: